Fixed the text overflow

--- a/style.css
+++ b/style.css
@@ -53,7 +53,12 @@ body {
     font-variant-numeric: tabular-nums;
     letter-spacing: 2px;
     margin: 10px 0;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
+
 
 .controls {
     display: flex;
